clusters/staging/grafana-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-dev-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: grafana-dev-selfsigned
spec:
  ingressClassName: nginx
  rules:
    - host: grafana-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-stack-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana-dev.local
      secretName: grafana-dev-tls
